Parameterized which docker intall to fetch and run
In otherwords you can choose between:

 * https://get.docker.com/
 * https://test.docker.com/
 * https://experimental.docker.com/

by passing in an environment variable (VPS_WHICH_DOCKER)

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # Vagrant artifacts
 .vagrant
 
-# IDE artifacts
+# IDE and editor artifacts
 .idea
 **/*.iml
+**/.*.swp
 
 # Run-time artifacts
 **/*.log
